syntax = "proto3";

import "proto/conabit/englearn/common/session.proto";

package conabit.englearn.exercise;

option go_package = "github.com/Conabit-Corp/EngLearn/proto/conabit/englearn/exercise";

service WordService {
  rpc RegisterWordPair(RegisterWordPairRequest) returns (WordPair) {}

  rpc CloneWordPair(CloneWordPairRequest) returns (WordPair) {}

  rpc FindUserWords(conabit.englearn.common.Session) returns (stream WordPair) {
  }
}

message WordPair {
  string id = 1;
  Word word1 = 2;
  Word word2 = 3;
}

message Word {
  string id = 1;
  string word_value = 2;
  string country_code = 3;
}

message RegisterWordPairRequest {
  conabit.englearn.common.Session session = 1;
  WordPair word_pair = 2;
}

message CloneWordPairRequest {
  conabit.englearn.common.Session sesion = 1;
  WordPair word_pair = 2;
}